[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cwru-plus"
version = "0.2.1"
description = "An enterprise-grade, ultra-fast pipeline for downloading, filtering, and windowing the CWRU bearing dataset."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ali Razani" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=2.2.6",
    "scipy>=1.15.2",
    "tqdm>=4.68.3",
    "requests>=2.34.2",
]

[tool.setuptools]
packages = ["cwru"]

[tool.setuptools.package-data]
"cwru" = ["*.py"]

[project.urls]
Homepage = "https://github.com/Razani-Ali/cwru-plus"
"Bug Tracker" = "https://github.com/Razani-Ali/cwru-plus/issues"